<resources>
    <string name="app_name">Echando Raíces</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login/Register Activity -->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="loginBtn"><u>Inicia sesión</u></string>
    <string name="register">Registrarse</string>
    <string name="registerBtn"><u>Regístrate</u></string>

    <!-- Profile Fragment -->
    <string name="profile_email">Correo Electrónico</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_lastname">Apellido</string>
    <string name="profile_submit_button">Actualizar</string>
    <string name="profile_phone">Teléfono</string>
    <string name="profile_password">Contraseña</string>

    <!-- Add Space Fragment -->
    <string-array name="spaces_array">
        <item></item>
        <item>Escuela</item>
        <item>Vía pública</item>
        <item>Propiedad privada</item>
    </string-array>

    <string-array name="states_array">
        <item>Baja California</item>
        <item>Tamaulipas</item>
    </string-array>

    <string-array name="citiesBC_array">
        <item>Mexicali</item>
        <item>Rosarito</item>
        <item>Tecate</item>
        <item>Tijuana</item>
    </string-array>

    <string-array name="citiesTamaulipas_array">
        <item>Nuevo Laredo</item>
    </string-array>

    <!-- Add Tree Fragment -->
    <string name="add_tree_name">Encargado</string>
    <string name="add_tree_space">Espacio</string>
    <string name="add_tree_cntd">Cantidad</string>
    <string name="add_tree_plant">Tipo de Planta</string>
    <string name="add_tree_date">Fecha</string>
    <string name="add_tree">Agregar Árbol</string>

    <string-array name="plants_array">
        <item>Árbol</item>
        <item>Arbusto</item>
        <item>Mata</item>
        <item>Hierba</item>
    </string-array>

    <!-- About Fragment -->
    <string name="about_app_name">Echando Raices</string>
    <string name="about_app_version">Version 0.1.0</string>
    <string name="about_company">Un proyecto de:</string>
    <string name="about_site_url">
        <a href="https://fqt.org.mx">Fundación que Transforma</a>
    </string>
    <string name="about_development_team">Aplicación desarrollada en conjunto con UABC-FCQI</string>
    <string name="about_developer1">Alberto Chagala</string>
    <string name="about_developer2">Salvador Gonzalez</string>
    <string name="about_developer3">Ivan Morales</string>
    <string name="about_developer4">Miguel Maldonado</string>
</resources>