<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fqt_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/nav_header_gradient"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="Acerca de"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_round_square"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:elevation="2dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_app_name"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_app_version"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_company"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:linksClickable="false"
                android:text="@string/about_site_url"
                android:textSize="20sp"
                android:textColorLink="#6BC200"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_development_team"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Programada por:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_developer1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_developer2"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_developer3"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_developer4"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>