<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/et_registerEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_registerPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/fqt_green"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp"
        android:textAlignment="center"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tienes cuenta con nosotros?"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/loginBtn"
            android:textSize="15sp"
            android:textColor="@color/red"/>

    </LinearLayout>

</LinearLayout>