<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".AddForestationFragment" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/frag_layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agregar Árbol"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_round_square"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-35dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tree_name"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_addTreeName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:ems="10"
                android:inputType="none"
                android:focusable="false"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tree_space"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>

            <Spinner
                android:id="@+id/sp_addTreeSpace"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:paddingStart="2dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:ems="10"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_tree_cntd"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_addTreeCntd"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingStart="10dp"
                        android:background="@drawable/custom_input"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:ems="10"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_tree_plant"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/sp_addTreePlant"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingStart="2dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_input"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:ems="10"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>

            <fragment
                android:layout_margin="10dp"
                android:id="@+id/add_map"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:name="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_addTree"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_tree"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>